# basic-lstm-weather-prediction

./: LICENSE  README.md  main.ipynb  main2.ipynb  pyproject.toml  requirements.txt  test_multivariate_multiple-input.ipynb  test_multivariate_multiple-parallel.ipynb  test_univariate_bidirectional.ipynb  test_univariate_cnn-lstm-hybrid.ipynb  test_univariate_convLSTM.ipynb  test_univariate_stacked.ipynb  test_univariate_vanilla.ipynb
