[tool.poetry]
name = "lstm-learn"
version = "0.1.0"
description = "LSTM application for KIIT Weather Prediction"
authors = ["Aman \"Vajradevam\" Pathak"]
license = "Copyright Dinotech Consultancies 2024"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
pandas = "^2.2.2"
numpy = "^2.0.0"
tensorflow = "2.12.0"
keras = "2.12.0"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
